# mote

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-test.yaml  deploy.yaml  hardware-check.yaml  release-ffi-c.yaml  release-ffi-python.yaml  release-firmware.yaml  release-hardware.yaml  rust.yml
mote-api/: Cargo.toml  README.md  justfile  pyproject.toml
mote-api/examples/: rerun_viz.rs
mote-api/src/: ffi.rs  lib.rs  messages.rs
mote-api/src/ffi/: python.rs  wasm.rs
mote-api/src/messages/: host_to_mote.rs  mote_to_host.rs
mote-book/: book.toml  justfile
mote-book/src/: README.md  SUMMARY.md  motivation.md
mote-book/src/advanced/contributing/: build_test_deploy.md  contributing.md  dev_env.md  faq.md  hardware.md
mote-book/src/getting_started/: kit-assembly.md
mote-book/src/hardware-sourcing/: acquire.md  circuit-boards.md
mote-configuration/: .gitignore  Cargo.toml  justfile  package-lock.json  package.json  vite.config.ts
mote-configuration-page/: bit.json  index.css
mote-configuration/app/: README.md  index.html  vite.config.ts
mote-configuration/app/src/lib/: LongSpinner.svelte  Networks.svelte  mote_api.js  shared.svelte.ts
mote-configuration/scripts/: generate-types.mjs
mote-configuration/src/: App.svelte  lib.rs
mote-configuration/src/lib/: Diagnostics.svelte  Identification.svelte  NetworkEntry.svelte  link.ts  shared.svelte.ts  webserial.d.ts
mote-configuration/src/styles/: third_party.css
mote-ffi/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  justfile  pyproject.toml
mote-ffi/include/: mote_link.h
mote-ffi/mote_link/: __main__.py  link.py  mote_ffi.pyd
mote-ffi/mote_link/examples/: rerun_demo.py
mote-ffi/mote_link/tests/: conftest.py  test_link.py
mote-ffi/src/: c.rs  lib.rs  main.rs  python.rs  wasm.rs
mote-firmware/: Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml
mote-firmware/src/: flash_config.rs  helpers.rs  main.rs  tasks.rs
mote-firmware/src/tasks/: drive_base.rs  flash_manager.rs  imu.rs  lidar.rs  power_gate.rs  status_led.rs  usb_serial.rs  web_usb_config.rs  wifi.rs
mote-firmware/src/tasks/drive_base/: drv8833.rs  encoder.rs  hbridge.rs  motor.rs
mote-firmware/src/tasks/imu/: lib.rs  regs.rs
mote-firmware/src/tasks/lidar/: rp_c1_driver.rs
mote-firmware/src/tasks/status_led/: led_driver.rs
mote-firmware/src/tasks/wifi/: connection_manager.rs  mdns.rs  tcp_server.rs  udp_server.rs
mote-firmware/src/web/: index.html  index.js  networks.json
mote-hardware/: .gitignore  MCU_RaspberryPi_RP2350.kicad_sym  RPI_RMC20452T.kicad_sym  _autosave-motor.kicad_sch  drc.kibot.yaml  fp-lib-table  imu.kicad_sch  justfile  mote-hardware.kibot.yaml  mote-hardware.kicad_pcb  mote-hardware.kicad_pro  mote-hardware.kicad_sch  mote-hardware.kicad_sch_old  motor.kicad_sch  power.kicad_sch  rp2354.kicad_sch  rp_lidar_c1.kicad_sch  rpi_rmc20452t.kicad_mod  status_indicator.kicad_sch  sym-lib-table
mote-hardware/models/: rpi_rmc20452t.step
mote-hardware/silk-screen/: silk-screen.txt
mote-host-driver/: Cargo.toml  README.md
mote-host-driver/examples/: rerun_viz.rs
mote-host-driver/src/: lib.rs
mote-messages/: Cargo.toml  pyproject.toml
mote-messages/src/: comms.rs  lib.rs  python_interface.rs
mote-messages/src/messages/: host_to_mote.rs  mote_to_host.rs
mote-rerun-visualization/: Cargo.toml
mote-sansio-driver/: Cargo.toml  README.md  main.py  pyproject.toml
mote-sansio-driver/examples/: rerun_viz.rs  teleop.rs
mote-sansio-driver/src/: lib.rs
mote-web/configuration/: Cargo.toml  index.html  index.js  server.js
mote-web/configuration-page/: index.html  index.js
mote-web/configuration/backup/: index.html  index.js.bak
mote-web/configuration/scripts/: index.js
mote-web/configuration/src/: lib.rs
mote-web/configuration/styles/: index.css  third_party.css
mote-web/mote-book/: book.toml
mote-web/mote-book/src/: README.md
src/: drivers.rs  main.rs  tasks.rs
src/tasks/: lidar.rs  wifi.rs
web/mote-configuration/: Cargo.toml  README.md
web/mote-configuration/app/: index.html  package-lock.json  package.json  vite.config.ts
web/mote-configuration/app/src/: App.svelte  main.ts
web/mote-configuration/app/src/lib/: Diagnostics.svelte  Identification.svelte  NetworkEntry.svelte  Networks.svelte  ShortSpinner.svelte  mote_api.js
web/mote-configuration/app/src/styles/: third_party.css
web/mote-configuration/src/: lib.rs
