[package]
name = "mote-api"
version = "0.0.0"
edition = "2024"

[features]
python_ffi = ["serde/std", "serde_json", "pyo3"]
wasm_ffi = ["serde/std", "serde_json", "wasm-bindgen", "gloo-utils"]

[lib]
name = "mote_api"
# This shouldn't be required, but wasm-pack doesn't support passing --crate-type throught to rustc :(
# https://github.com/drager/wasm-pack/issues/1297
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcode = { version = "0.6", default-features = false, features = [
    "derive",
    "serde",
] }
# defmt = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
corncobs = "0.1"
thiserror = { version = "2.0", default-features = false }

# Used for python/wasm bindings
serde_json = { version = "1.0", optional = true }
pyo3 = { version = "0.28.0", optional = true, features = ["abi3-py38"] }
wasm-bindgen = { version = "0.2", optional = true }
gloo-utils = { version = "0.1", features = ["serde"], optional = true }

[build-dependencies]
schemars = "1.2"

[dev-dependencies]
color_space = "0.5"
mdns = "3.0"
rerun = { version = "0.25", features = ["web_viewer"] }
anyhow = "1.0"
