[package]
name = "mote-api"
version = "0.0.0"
edition = "2024"

[dependencies]
bitcode = { version = "0.6", default-features = false, features = [
    "derive",
    "serde",
] }
# defmt = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
corncobs = "0.1"
thiserror = { version = "2.0", default-features = false }

schemars = { version = "1.2", optional = true }

[dev-dependencies]
color_space = "0.5"
mdns = "3.0"
rerun = { version = "0.25", features = ["web_viewer"] }
anyhow = "1.0"
