[project]
name = "mote_link"
version = "0.0.0"
description = "Python library for communicating with Mote"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["zeroconf>=0.136", "rerun-sdk>=0.21", "survey>=5.4"]

[project.scripts]
rerun-demo = "mote_link.examples.rerun_demo:main"

[tool.uv]
package = true

[tool.maturin]
include = ["mote_link/**/*"]
module-name = "mote_link.mote_ffi"
features = ["python_ffi"]
cargo-extra-args = "--crate-type=dylib"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = ["ty>=0.0.18", "ruff>=0.15.2", "pytest>=8.0"]
