[package]
name = "mote-firmware"
version = "0.0.0"
edition = "2024"

[dependencies]
mote-messages = { path = "../mote-messages" }

embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "icmp",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "proto-ipv4",
    "proto-ipv6",
    "multicast",
] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
heapless = "0.8"

cyw43 = { version = "0.4.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.6.0", features = ["defmt"] }

assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1"
rand_core = "0.6.4"
rand = { version = "0.8.5", default-features = false }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

# postcard does not re-export heapless, so care must be taken to keep them in lockstep
postcard = "1.1.*"
heapless-postcard = { package = "heapless", version = "0.7.1" }

serde = { version = "1.0.*", default-features = false, features = ["derive"] }
serde_with = { version = "3.14.0", default-features = false, features = [
    "macros",
] }
leasehund = "0.2.0"

[profile.release]
debug = 2
