[package]
name = "mote-firmware"
version = "0.0.0"
edition = "2024"

[features]
bake-cyw43-firmware = []

[dependencies]
mote-api = { path = "../mote-api" }

embassy-embedded-hal = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.10", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "nightly",
] }
embassy-time = { version = "0.5", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.10", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-net = { version = "0.9", features = [
    "defmt",
    "icmp",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "dns",
    "proto-ipv4",
    "proto-ipv6",
    "multicast",
    "auto-icmp-echo-reply",
] }
embassy-usb = { version = "0.6", features = ["defmt"] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.8", features = ["defmt"] }

# defmt output is painfully verbose for this driver
# cyw43 = { version = "0.7", features = ["defmt", "firmware-logs"] }
cyw43 = { version = "0.7", features = ["defmt"] }
cyw43-pio = { version = "0.10", features = ["defmt"] }

assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

defmt = { version = "1.0", features = ["alloc"] }
defmt-rtt = "1.0"
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2.1"
rand = { version = "0.8", default-features = false }
embedded-io-async = { version = "0.7", features = ["defmt"] }

bitcode = { version = "0.6", default-features = false, features = [
    "derive",
    "serde",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "3.14", default-features = false, features = [
    "macros",
] }

# TODO: Switch back to crates.io versions once a release of edge-net supports
# both embassy-sync 0.8 and embassy-net 0.9 simultaneously. As of 2025-04-22,
# edge-mdns 0.7.0 (crates.io) requires embassy-sync ^0.7, which conflicts with
# embassy-rp 0.10's requirement of embassy-sync ^0.8.
edge-mdns = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0", features = [
    "defmt",
] }
edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0", features = [
    "defmt",
] }
edge-nal = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }

rand_core = { version = "0.10", default-features = false }
fixed = "1.29"
pid = "4.0"
embedded-hal = "1.0"
embedded-alloc = "0.7"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = true
