[package]
name = "mote-host-driver"
version = "0.0.0"
edition = "2024"

[dependencies]
mote-messages = { path = "../mote-messages" }

serde = "1.0.*"
# postcard does not re-export heapless, so care must be taken to keep them in lockstep
postcard = "1.1.*"
heapless-postcard = { package = "heapless", version = "0.7.1" }
anyhow = "1.0.98"

[dev-dependencies]
heapless = "0.8"
rerun = { version = "0.23.*", features = ["web_viewer"] }
