[package]
name = "configuration"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mote-sansio-driver = { path = "../../mote-sansio-driver" }
mote-messages = { path = "../../mote-messages" }

# postcard does not re-export heapless, so care must be taken to keep them in lockstep
postcard = { version = "1.1.3", features = ["use-defmt"] }
heapless = { version = "0.8", features = ["defmt-03", "serde"] }

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"
anyhow = "1.0"
